<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".main.MainActivity">
    <item
        android:id="@+id/doctors"
        android:orderInCategory="100"
        android:title="@string/doctors"
        android:showAsAction="never" />
<!--    <group android:checkableBehavior="single">-->
    <item
        android:id="@+id/patients"
        android:orderInCategory="100"
        android:title="@string/patients"
        android:showAsAction="never" />
    <item
        android:id="@+id/specialties"
        android:orderInCategory="100"
        android:title="@string/specialties"
        android:showAsAction="never" />

    <item
        android:id="@+id/disease_types"
        android:orderInCategory="100"
        android:title="@string/disease_types"
        android:showAsAction="never" />
    <item
        android:id="@+id/visitings"
        android:orderInCategory="100"
        android:title="@string/visitings"
        android:showAsAction="never" />
<!--    </group>-->
</menu>
