<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_policlinica_foreground"
        android:paddingTop="100dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:paddingTop="20dp">
        <Button
            android:id="@+id/bDoctors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doctors"></Button>
        <Button
            android:id="@+id/bPatients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patients"></Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:paddingTop="20dp">
        <Button
            android:id="@+id/bSpecialties"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/specialties"></Button>
        <Button
            android:id="@+id/bDiseaseTypes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disease_types"></Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:paddingTop="20dp">
        <Button
            android:id="@+id/bVisitings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visitings"></Button>
    </LinearLayout>
</LinearLayout>